--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
     "description": "A bot that posts a When2Meet for our weekly DnD sessions",
     "main": "bot.js",
     "author": "Kathy Li",
+    "license": "UNLICENSED",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/kathyttli/bearly-friends.git"
+    },
     "dependencies": {
         "cron": "^1.6.0",
         "discord.js": "^11.4.2",
